css fix for buy now button alignment on home page slides on mobile

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -767,7 +767,8 @@ hr {
 }
 
 #fullpage .product-main {
-    .buy-button {
+    .buy-button,
+    .more-info {
         margin: 6px 0;
     }
 }
